# linear-claude-skill

./: .env.schema  CHANGELOG.md  README.md  SKILL.md  package-lock.json  package.json
scripts/: .gitignore  download-images.sh  linear-api.mjs  linear-ops.ts  oauth-setup.ts  query.sh  query.ts  setup.ts  sync.ts  upload-image.ts
scripts/lib/: initiative.ts  labels.ts  linear-utils.ts  project-template.ts  token-refresh.ts  verify.ts
scripts/query-bench/: PERF_COMPARE.md  benchmark.sh
scripts/query-bench/go/: go.mod  main.go  main_test.go
scripts/query-bench/rust/: Cargo.toml
scripts/query-bench/rust/src/: lib.rs  main.rs
scripts/query-bench/tests/: test_contract.sh
scripts/query-bench/zig/: build.zig
scripts/query-bench/zig/src/: main.zig
