[package]
name = "query"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "query"
path = "src/main.rs"

[[bin]]
name = "download_images"
path = "src/bin/download_images.rs"

[dependencies]
dotenvy = "0.15"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
